# inventory

./: .gitignore
api/: abac_policy.json  app.py  appsettings.json  appsettings.py  pyproject.toml
api/app/common/: dict_utils.py  utils.py
api/app/controllers/: __init__.py  amenity_controller.py  hotel_controller.py
api/app/db/mongo/: __init__.py
api/app/db/mongo/documents/: __init__.py  amenity.py  amenity_provider_mapping.py  image.py  place.py  property.py  translation.py
api/app/error_handlers/: error_handler.py
dashboard/app/: __init__.py
dashboard/app/authorization/: __init__.py
dashboard/app/common/: constants.py
dashboard/app/controllers/: account_controller.py  home_controller.py  hotel_controller.py  user_contrroller.py
dashboard/app/db/: __init__.py
dashboard/app/db/mongo/documents/: __init__.py  account.py  airline.py  attribute.py  image.py  place.py  property.py  review.py  tour.py  translation.py  user.py
dashboard/app/decorators/action_filters/: authorize_filter.py
dashboard/app/middlewares/: __init__.py
dashboard/app/middlewares/pipeline_inside_app/: __init__.py
dashboard/app/models/entities/: user.py
dashboard/app/templates/: index.html  login.html
dashboard/client/: App.vue  constant.js  index.js  package-lock.json  package.json  store.js  webpack.config.js
